# sod2d_github

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
mesh/: DENSI.alya  PRESS.alya  VELOC.alya  initialCondition.py  reorder_hyb.py  reorder_negative.py  shock_tube.coord  shock_tube.fix.bou  shock_tube.geo  shock_tube.msh
mesh2d/: DENSI.alya  PRESS.alya  getCoordinates.py  initialCondition.py  shock_tube.coord  shock_tube.geo
mesh3d/: DENSI.alya  gmsh2alya.pl  shock_tube.coord  shock_tube.geo
src/: .mass_matrix.f90.swp  .sod2d.f90.swp  elem_convec.f90  elem_diffu.f90  elem_hex.f90  elem_qua.f90  elem_source.f90  inicond_reader.f90  jacobian_oper.f90  mass_matrix.f90  mesh_reader.f90  mod_analysis.f90  mod_entropy_viscosity.f90  mod_geom.f90  mod_gpu_vars.f90  mod_graph.f90  mod_nvtx.f90  mod_output.f90  mod_period.f90  mod_solver.f90  quadrature_rules.f90  sod2d.f90  solvers.f90  time_integ.f90
src/main/: sod2d.f90
unitt/: CMakeLists.txt
unitt/unitt_3d_jacobian_inverse/: CMakeLists.txt  unitt_3d_jacobian_inverse.f90
unitt/unitt_CSR_SPMV_scal/: CMakeLists.txt  unitt_CSR_SPMV_scal.f90
unitt/unitt_CSR_apinv/: .unitt_CSR_apinv.f90.swp  CMakeLists.txt  unitt_CSR_apinv.f90
unitt/unitt_CSR_mc/: CMakeLists.txt  unitt_CSR_mc.f90
unitt/unitt_HEX27_test/: elem_hex.f90  elem_hex.mod  jacobian_oper.mod  quadrature_rules.f90  quadrature_rules.mod  test.x  unitt_hex27_test.f90
unitt/unitt_char_length/: CMakeLists.txt  unitt_char_length.f90
unitt/unitt_compute_non_zeros/: .unitt_compute_non_zeros.f90.swp  CMakeLists.txt  unitt_compute_non_zeros.f90
unitt/unitt_ener_convec/: CMakeLists.txt  elem_convec.f90  unitt_ener_convec.f90  unitt_ener_convec.m
unitt/unitt_entropy_viscosity/: CMakeLists.txt  PRESS.alya  unitt_entropy_viscosity.f90
unitt/unitt_generic_scalar_convec/: CMakeLists.txt  unitt_generic_scalar_convec.f90
unitt/unitt_mass_convec/: CMakeLists.txt  elem_convec.f90  unitt_mass_convec.f90  unitt_mass_convec.m
unitt/unitt_mom_convec/: CMakeLists.txt  unitt_mom_convec.f90  unitt_mom_convec.m
unitt/unitt_mom_diffu/: CMakeLists.txt  unitt_mom_diffu.f90
