###################################################################
# Copyright 2005 - 2021 Barcelona Supercomputing Center.          #
# Distributed under the ALYA AVAILABLE SOURCE ("ALYA AS") LICENSE #
# for nonprofit scientific purposes only.                         #
# See companion file LICENSE.txt.                                 #
###################################################################

add_subdirectory(unitt_mass_convec)
add_subdirectory(unitt_mom_convec)
add_subdirectory(unitt_mom_diffu)
add_subdirectory(unitt_ener_convec)
add_subdirectory(unitt_generic_scalar_convec)
add_subdirectory(unitt_3d_jacobian_inverse)
#add_subdirectory(unitt_compute_non_zeros)
#add_subdirectory(unitt_CSR_mc)
#add_subdirectory(unitt_CSR_SPMV_scal)
#add_subdirectory(unitt_CSR_apinv)
add_subdirectory(unitt_char_length)
#add_subdirectory(unitt_entropy_viscosity)
